<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OBD Mobile Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_Main">Main</string>
    <string name="title_LD">Live Data</string>
    <string name="title_DTCLU">DTC Look Up</string>
    <string name="stat_connect">Connected</string>
    <string name="stat_disconnect">Disconnected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_con_content">Disconnected Image</string>
    <string name="btn_clearcodes">Clear Codes</string>
    <string name="title_exit">Exit</string>
    <string name="btn_chkcodes">Check Codes</string>
    <string name="tempgaugetitle">Temp F</string>
    <string name="speedGaugeTitle">MPH</string>
    <string name="rpmGaugeTitle">x1000 RPM</string>
    <string name="engLoadGaugeTitle">Eng Load %</string>
    <string name="intTempGaugeTitle">Int Temp F</string>
    <string name="voltGaugeTitle">Voltage</string>
</resources>
